--- a/ecommerce/static/ngTemplates/app.ecommerce.search.typehead.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.search.typehead.html
@@ -9,7 +9,7 @@
       </div>
       <div ng-if="match.model.typ == 'list' && !match.model.added" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
         <button type="button" class="btn btn-success" ng-click="addToCart(match.model)">
-          Add to Card
+          Add to Cart
         </button>
       </div>
       <div ng-if="match.model.typ == 'list' && match.model.added" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
