--- a/ecommerce/static/ngTemplates/app.ecommerce.details.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.details.html
@@ -36,7 +36,8 @@
             <div class="row container-fluid">
               <!-- <uib-rating ng-model="ratings.averageRating.rating__avg" max="5" readonly="true" aria-labelledby="default-rating" style="font-size:20px;color:#e2a900;" class="text-muted"></uib-rating> -->
               <!-- <span style="background-color:red; color:white; padding:5px; border-radius:5px;" ng-if="details.rating.rating__avg==none"> 0.0 <i class="fa fa-star" aria-hidden="true"></i></span> -->
-              <span style="background-color:#388e3c; color:white; padding:5px; border-radius:5px;" ng-if="details.rating.rating__avg!=none"> {{details.rating.rating__avg| number : 1}} <i class="fa fa-star" aria-hidden="true"></i></span> {{details.rating_count}} Ratings & Reviews
+              <span style="background-color:#388e3c; color:white; padding:5px; border-radius:5px;" ng-if="details.rating.rating__avg!=none"> {{details.rating.rating__avg| number : 1}} <i class="fa fa-star" aria-hidden="true"></i></span><span ng-if="showRatings"> {{details.rating_count}} Ratings & Reviews</span>
+
             </div>
             <div class="row container-fluid" style="padding-top:14px;">
               <i class="fa fa-money fa-1x text-muted"></i> Cash on delivery : Yes
@@ -65,15 +66,15 @@
           </div>
         </div>
         <div class="row" style="padding:10px;" ng-if="me != null">
-          <div class="col-md-6" ng-if="showOptions">
+          <!-- <div class="col-md-6" ng-if="showOptions">
             <div class="row container-fluid text-center" style="background-color:#ec1616; color:white; padding:5px 0px;">
               <span ng-click="buy(details)" style="cursor:pointer;">
                 <span style="font-size:15px;"><b> Buy Now </b></span>
               <i class="fa fa-bolt fa-2x"></i>
               </span>
             </div>
-          </div>
-          <div class="col-md-6 " ng-if="showOptions">
+          </div> -->
+          <div class="col-md-12 " ng-if="showOptions">
             <div class="row container-fluid text-center" style="background-color:#164cec; color:white; padding:5px 0px;">
               <span ng-click="addToCart(details.pk)" style="cursor:pointer;">
                   <span style="font-size:15px;"><b> Add To Cart </b></span>
