--- a/HR/static/ngTemplates/app.HR.manage.users.explore.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.explore.html
@@ -74,7 +74,7 @@
   </div>
   <div class="col-md-6">
     <div class="container-fluid">
-      <div class="row" style="padding:20px;">
+      <!-- <div class="row" style="padding:20px;">
         <div class="row">
           <div class="col-md-3 text-right">
             <label>Local Address :</label> <br>
@@ -88,9 +88,9 @@
             <span>{{data.localAddressCountry}}<span ng-if="!data.localAddressCountry" class="text-danger">NA</span></span><br>
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="row" style="padding:20px;">
+      <!-- <div class="row" style="padding:20px;">
         <div class="row">
           <div class="col-md-3 text-right">
             <label>Permanent Address :</label> <br>
@@ -104,9 +104,9 @@
             <span>{{data.permanentAddressCountry}}<span ng-if="!data.permanentAddressCountry" class="text-danger">NA</span></span>
           </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="row" style="padding:20px;">
+      <!-- <div class="row" style="padding:20px;">
         <div class="row">
           <div class="col-md-3 text-right">
             <label>Father's name :</label>
@@ -258,7 +258,7 @@
             <a ng-href="{{data.passbook}}" target="_blank">{{data.passbook.split('/')[data.passbook.split('/').length-1] }}</a>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="col-md-3">
