--- a/HR/static/ngTemplates/app.HR.manage.users.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.html
@@ -53,10 +53,10 @@
           <div ng-include="'/static/ngTemplates/app.HR.form.editDesignation.html'" data="tab.data" submit-Fn="editDesignation($index)" form-title="tab.title"></div>
         </div>
 
-        <div ng-if="tab.app == 'editPayroll'">
+        <!-- <div ng-if="tab.app == 'editPayroll'">
           <div ng-include="'/static/ngTemplates/app.HR.form.editPayroll.html'"></div>
 
-        </div>
+        </div> -->
         <div ng-if="tab.app == 'viewProfile'">
           <div ng-include="'/static/ngTemplates/app.HR.manage.users.explore.html'"></div>
         </div>
