--- a/HR/static/ngTemplates/app.HR.manage.users.items.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.items.html
@@ -38,11 +38,11 @@
                 <i class="fa fa-pencil fa-lg" ></i>
               </span>
         </div>
-        <div class="col-md-2">
+        <!-- <div class="col-md-2">
           <span style="cursor:pointer;" ng-click="rowActionClicked('editPayroll')">
                 <i class="fa fa-credit-card fa-lg" ></i>
               </span>
-        </div>
+        </div> -->
         <div class="col-md-2">
           <span style="cursor:pointer;" ng-click="rowActionClicked('editDesignation')">
                 <i class="fa fa-caret-up fa-2x" style="margin-top:-15px;" ></i>
