--- a/HR/static/ngTemplates/app.HR.form.createCustomer.html
+++ b/HR/static/ngTemplates/app.HR.form.createCustomer.html
@@ -1,12 +1,10 @@
 <div class="col-md-6" ng-controller="admin.editCustomer" >
   <h4>{{mode=='new' ? 'New' : 'Edit'}} Customer</h4>
   <div class="form-group" >
-
     <div style="margin:30px">
       <label class="radio-inline"><input type="radio" name="full" ng-model="newCustomer.access" value="full_access" ><span style="padding-left:10px;" >Full access</span> </label>
       <label class="radio-inline"><input type="radio" name="full" ng-model="newCustomer.access" value="restrict_access"><span style="padding-left:10px;" > Restricted access </span></label>
     </div>
-
     <label>Username</label>
     <input type="text" class="form-control" ng-model="newCustomer.username" required  placeholder="username">
   </div>
@@ -20,7 +18,7 @@
   </div>
   <div class="form-group">
     <label >Password</label>
-    <input type="password" class="form-control" ng-model="newCustomers.password" required placeholder="Password">
+    <input type="password" class="form-control" ng-model="newCustomer.password" required placeholder="Password">
   </div>
   <button class="btn btn-primary" type="button" name="button" ng-click="createCustomer()">Save</button>
 </div>
