--- a/HR/static/ngTemplates/app.HR.form.userProfile.html
+++ b/HR/static/ngTemplates/app.HR.form.userProfile.html
@@ -14,10 +14,10 @@
       </h3>
     </div>
     <div class="col-md-6">
-      <ul class="pager">
+      <!-- <ul class="pager">
         <li class="previous" ng-click="prev()"><a href="">&larr; Previous</a></li>
         <li class="next" ng-click="next()"><a href="">Next &rarr;</a></li>
-      </ul>
+      </ul> -->
       <div ng-show="page==1">
         <div class="form-group">
           <label for="empID">Employee ID</label>
@@ -46,7 +46,22 @@
             </div>
           </div>
         </div>
-        <div class="form-group">
+        <div class="row">
+          <div class="col-md-1">
+            <i class="fa {{data.displayPicture | fileTypeIcon}} fa-3x"></i>
+          </div>
+          <div class="col-md-5">
+            <a ng-href="{{data.displayPicture}}" target="_blank">{{data.displayPicture.split('/')[data.displayPicture.split('/').length-1] }}</a>
+          </div>
+          <div class="col-md-6">
+            <div class="form-group">
+              <label>Display Picture:</label>
+              <input type="file" name="displayPicture" file-model="files.displayPicture">
+            </div>
+          </div>
+        </div>
+
+        <!-- <div class="form-group">
           <label style="margin-right:20px;">Married ?</label>
           <label class="radio-inline"><input type="radio" name="married{{pk}}" ng-model="data.married" ng-value="false">Single</label>
           <label class="radio-inline"><input type="radio" name="married{{pk}}" ng-model="data.married" ng-value="true">Married</label>
@@ -74,8 +89,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="container-fluid" style="padding:0px">
+        </div> -->
+        <!-- <div class="container-fluid" style="padding:0px">
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
@@ -131,8 +146,8 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="form-group">
+        </div> -->
+        <!-- <div class="form-group">
           <label>Blood Group</label>
           <select class="form-control" ng-model="data.bloodGroup">
             <option>A+</option>
@@ -174,9 +189,9 @@
               <input type="text" class="form-control" ng-model="data.emergencyNumber" placeholder="Emergency contact number">
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
-      <div ng-show="page==2">
+      <!-- <div ng-show="page==2">
         <div class="form-group">
           <label>Doctorate University</label>
           <input type="text" class="form-control" ng-model="data.docUniversity" placeholder="">
@@ -212,8 +227,8 @@
           <label>Note3</label>
           <textarea type="text" rows="4" class="form-control" ng-model="data.note3" placeholder="note3"> </textarea>
         </div>
-      </div>
-      <div ng-show="page==3">
+      </div> -->
+      <!-- <div ng-show="page==3">
 
         <div class="row">
           <div class="col-md-1">
@@ -424,11 +439,11 @@
 
 
 
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-md-6 col-md-offset-4">
       <button ng-click="save()" type="button" class="btn btn-primary">
         Save
       </button>
