--- a/ecommerce/static/ngTemplates/app.ecommerce.footer.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.footer.html
@@ -174,7 +174,7 @@
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Cancellations'.split(' ').join('-').toLowerCase()})">Cancellations</span><br>
       <span style="cursor:pointer;" ng-click="$state.go('pages' , {title : 'Returns'.split(' ').join('-').toLowerCase()})">Returns</span><br>
       <span style="font-size:12px;cursor:pointer;" ng-click="$state.go('pages' , {title : 'Privacy Policy'.split(' ').join('-').toLowerCase()})">Privacy Policy</span><br>
-      <span style="font-size:12px;cursor:pointer;" ng-click="$state.go('blog' , {title : 'Blog'.split(' ').join('-').toLowerCase()})">Blog</span>
+      <span style="font-size:12px;cursor:pointer;" ng-click="$state.go('blog' , {})">Blog</span>
     </div>
 
     <div class="col-xs-12 text-center" style="padding-top:15px">
