--- a/ecommerce/static/ngTemplates/app.ecommerce.search.typehead.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.search.typehead.html
@@ -12,15 +12,38 @@
           Add to Cart
         </button>
       </div>
-      <div ng-if="match.model.typ == 'list' && !match.model.added && !me.pk" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
+      <div ng-if="match.model.typ == 'list' && match.model.added>0 && me.pk" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
+        <!-- <button type="button" class="btn btn-default">
+          Added
+        </button> -->
+        <div class="col-md-4 col-sm-4 col-xs-4 text-right">
+          <i class="fa fa-minus-circle fa-2x" style="cursor:pointer" ng-if="match.model.added>0&&me.pk"  ng-click="decrementCart(match.model);$event.stopPropagation()"></i>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="bottom: 10px">
+          <span style="font-size:25px; padding:0px 0px 0px 0px;"> {{match.model.added}} </span>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4">
+          <i class="fa fa-plus-circle fa-2x" style="cursor:pointer"  ng-click="incrementCart(match.model);$event.stopPropagation()"></i>
+        </div>
+      </div>
+      <div ng-if="match.model.typ == 'list' && !match.model.added&& !me.pk" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
         <button type="button" class="btn btn-success" ng-click="addToCartCookie(match.model)">
           Add to Cart
         </button>
       </div>
-      <div ng-if="match.model.typ == 'list' && match.model.added" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
-        <button type="button" class="btn btn-default">
+      <div ng-if="match.model.typ == 'list' && match.model.added>0 && !me.pk" class="col-xs-4 text-right" style="padding-top:7px;" ng-click="$event.stopPropagation();">
+        <div class="col-md-4 col-sm-4 col-xs-4 text-right">
+          <i class="fa fa-minus-circle fa-2x" style="cursor:pointer" ng-if="match.model.added>1&&!me.pk"  ng-click="decrementCookie(match.model);$event.stopPropagation()"></i>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4 text-center" style="bottom: 10px">
+          <span style="font-size:25px; padding:0px 0px 0px 0px;"> {{match.model.added}} </span>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4">
+          <i class="fa fa-plus-circle fa-2x" style="cursor:pointer"  ng-click="incrementCookie(match.model);$event.stopPropagation()"></i>
+        </div>
+        <!-- <button type="button" class="btn btn-default">
           Added
-        </button>
+        </button> -->
       </div>
     </div>
     <div ng-if="$parent.$parent.$last">
