--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.configImage.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.configImage.html
@@ -1,26 +1,30 @@
 <div class="row">
   <div class="container-fluid">
-    <div class="col-md-5">
+    <div class="col-md-8">
       <div class="row" style="margin:20px 15px">
         <div class="form-group">
-          <label>Background Image</label>
+          <label>Background Image (cover Image For Login Page)</label>
           <input type="file" file-model="form.backgroundImage">
         </div>
         <div class="form-group">
-          <label>Cart Image</label>
+          <label>Cart Image (Right Side Displaying Cart Image)</label>
           <input type="file" file-model="form.cartImage">
         </div>
         <div class="form-group">
-          <label>Payment Image</label>
+          <label>Payment Image (In The Footer Payment Method)</label>
           <input type="file" file-model="form.paymentImage">
         </div>
         <div class="form-group">
-          <label>Payment Potrait Image</label>
+          <label>Payment Potrait Image (In The Footer Payment Method For Mobile)</label>
           <input type="file" file-model="form.paymentPortrait">
         </div>
         <div class="form-group">
-          <label>Search Background Image</label>
+          <label>Search Background Image (In Header Search Background)</label>
           <input type="file" file-model="form.searchBgImage">
+        </div>
+        <div class="form-group">
+          <label>Blog Background Image (In Blog  Page)</label>
+          <input type="file" file-model="form.blogPageImage">
         </div>
         <button type="button" class="btn btn-primary" ng-click="addImage()">
           Save
