--- a/ecommerce/static/ngTemplates/app.ecommerce.blog.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.blog.html
@@ -1,10 +1,14 @@
 <div class="container-fluid">
 
   <div class="row">
-    <div class="col-md-12  hidden-xs hidden-sm  anim-in-out anim-zoom-out" style="padding-right:0px;padding-left:0px;margin-bottom:20px;border-bottom: solid 4px #eeeeee;overflow:hidden;height:45vh;background: url('/static/images/blog_banner.jpg') no-repeat center center;background-size: cover;">
+    <div class="col-md-12  hidden-xs hidden-sm  anim-in-out anim-zoom-out" style="padding-right:0px;padding-left:0px;margin-bottom:20px;border-bottom: solid 4px #eeeeee;overflow:hidden;height:45vh;background-size: cover;">
+      <img ng-if="genericImage.blogPageImage" src={{genericImage.blogPageImage}} style="width: 100%;" class="img" alt="Blog Image">
+      <img ng-if="!genericImage.blogPageImage" src="/static/images/blog_banner.jpg" style="width: 100%;" class="img" alt="Blog Image">
     </div>
     <div class="col-xs-12 col-sm-12 hidden-md hidden-lg  anim-in-out anim-zoom-out" style="padding-left:0px;padding-right:0px;margin-bottom:20px">
-      <img style="width: 100%;height:45vh;" class="img" src="/static/images/blog_banner.jpg">
+      <!-- <img style="width: 100%;height:45vh;" class="img" src="/static/images/blog_banner.jpg"> -->
+      <img ng-if="genericImage.blogPageImage" src={{genericImage.blogPageImage}} style="width: 100%;height:45vh;" class="img" alt="Blog Image">
+      <img ng-if="!genericImage.blogPageImage" src="/static/images/blog_banner.jpg" style="width: 100%;height:45vh;" class="img" alt="Blog Image">
     </div>
   </div>
 
