--- a/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
+++ b/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
@@ -44,6 +44,30 @@
     </div>
     <div class="row" style="margin-top:20px;">
       <div class="text-right col-md-4">
+        GST :
+      </div>
+      <div class="text-left col-md-8">
+        <span>{{contract.company.gst}}</span>
+      </div>
+    </div>
+    <div class="row" style="margin-top:20px;">
+      <div class="text-right col-md-4">
+        PAN No. :
+      </div>
+      <div class="text-left col-md-8">
+        <span>{{contract.company.pan}}</span>
+      </div>
+    </div>
+    <div class="row" style="margin-top:20px;">
+      <div class="text-right col-md-4">
+        State Code:
+      </div>
+      <div class="text-left col-md-8">
+        <span>{{contract.company.statecode}}</span>
+      </div>
+    </div>
+    <div class="row" style="margin-top:20px;">
+      <div class="text-right col-md-4">
         Telephone :
       </div>
       <div class="text-left col-md-8">
