--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -45,8 +45,8 @@
 
     <div class="row bg-purple hidden-md hidden-lg" style="margin-left:0px; padding-bottom:25px; ">
       <div class="col-xs-12">
-        <h4 style="color:white;">
-        <i class="fa fa-shopping-cart fa-2x"></i> Checkout
+        <h4 style="color:white;margin-top:50px;">
+        <i class="fa fa-shopping-cart fa-2x" ></i> Checkout
       </h4>
       </div>
     </div>
