--- a/ecommerce/static/ngTemplates/app.ecommerce.PagesDetails.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.PagesDetails.html
@@ -20,7 +20,7 @@
         <span ng-bind-html="blogData.header"></span>
         <hr>
       </div>
-      <div class="col-xs-12" style="background-color:#f2efe8;">
+      <div class="col-xs-12">
         <span ng-bind-html="blogData.source"></span>
       </div>
       <div class="col-xs-12" ng-if="blogData.suggestedProducts.length>0">
