--- a/support/static/ngTemplates/app.customerKnowledgeBase.html
+++ b/support/static/ngTemplates/app.customerKnowledgeBase.html
@@ -2,106 +2,108 @@
 
   <breadcrumb></breadcrumb>
 
-
   <div style="padding-top:20px;">
-    <div class="col-md-12">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="btn btn-block" ng-click="addDoc(-1)" style="font-size:18px ; {{docForm!=none&&docForm.title.length==0? 'background-color:#009efb; color:white':'background-color: #e9e9e9 !important;'   }}">
-            Add Document &nbsp;<i class="fa fa-plus fa-lg"></i>
-          </div>
-        </div>
-      </div>
-      <hr>
-      <div class="row" style="padding-top:15px">
-        <div class="col-md-3">
-          <div class="row" style="border-right:solid 2px #e0e0e0;min-height:54vh;position:relative;" ng-if="custDocs.length>0||docForm!=none">
-            <div class="row container-fluid card" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;margin:10px ;padding:15px; height:80px; border-radius:4px; box-shadow:none; {{docForm.pk==doc.pk?'background-color:#009efb ; color:white':'background-color: #e9e9e9 !important;'}}">
-              <div style="font-size:20px;padding:10px;margin-top:-17px;margin-left:-10px;opacity:0.9;margin-bottom:7px"><b>{{doc.title}}</b></div>
-              <ul style="list-style:none;margin-bottom:-10px;font-size:12px;opacity:0.7;" class="list-inline">
-                <li>Last modified:<b> {{doc.updated  | date:'dd-MMM-yyyy'}}</b></li>
-                <li ng-if="doc.process.text">Process:<b> {{doc.process.text}}</b></li>
-                <li>Versions:<b> {{doc.version_count}}</b></li>
-              </ul>
+    <div class="row" style="margin:10px;">
+      <div class="col-md-12">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="btn btn-block" ng-click="addDoc(-1)" style="font-size:18px ; {{docForm!=none&&docForm.title.length==0? 'background-color:#009efb; color:white':'background-color: #e9e9e9 !important;'   }}">
+              Add Document &nbsp;<i class="fa fa-plus fa-lg"></i>
             </div>
           </div>
         </div>
-        <div class="col-md-9" style="padding-left:35px" ng-if="docForm!=none">
-          <div class="row text-center">
-            <h4>{{docForm.pk!=none?'Edit':'Create'}} Document <span ng-if="docForm.pk!=none">- {{docForm.title}}</span></h4>
+        <hr>
+        <div class="row" style="padding-top:15px">
+          <div class="col-md-3">
+            <div class="row" style="border-right:solid 2px #e0e0e0;min-height:54vh;position:relative;" ng-if="custDocs.length>0||docForm!=none">
+              <div class="row container-fluid card" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;margin:10px ;padding:15px; height:80px; border-radius:4px; box-shadow:none; {{docForm.pk==doc.pk?'background-color:#009efb ; color:white':'background-color: #e9e9e9 !important;'}}">
+                <div style="font-size:20px;padding:10px;margin-top:-17px;margin-left:-10px;opacity:0.9;margin-bottom:7px"><b>{{doc.title}}</b></div>
+                <ul style="list-style:none;margin-bottom:-10px;font-size:12px;opacity:0.7;" class="list-inline">
+                  <li>Last modified:<b> {{doc.updated  | date:'dd-MMM-yyyy'}}</b></li>
+                  <li ng-if="doc.process.text">Process:<b> {{doc.process.text}}</b></li>
+                  <li>Versions:<b> {{doc.version_count}}</b></li>
+                </ul>
+              </div>
+            </div>
           </div>
-          <div class="row">
-            <div class="form-group">
-              <label>Title</label>
-              <input type="text " class="form-control" ng-model="docForm.title">
+          <div class="col-md-9" style="padding-left:35px" ng-if="docForm!=none">
+            <div class="row text-center">
+              <h4>{{docForm.pk!=none?'Edit':'Create'}} Document <span ng-if="docForm.pk!=none">- {{docForm.title}}</span></h4>
             </div>
             <div class="row">
-              <div class="col-md-8">
-                <div class="form-group" ng-if="docForm.text!=null">
-                  <label>Content</label>
-                  <textarea ui-tinymce="tinymceOptions" ng-model="docForm.text"></textarea>
+              <div class="form-group">
+                <label>Title</label>
+                <input type="text " class="form-control" ng-model="docForm.title">
+              </div>
+              <div class="row">
+                <div class="col-md-8">
+                  <div class="form-group" ng-if="docForm.text!=null">
+                    <label>Content</label>
+                    <textarea ui-tinymce="tinymceOptions" ng-model="docForm.text"></textarea>
+                  </div>
+                </div>
+                <div class="col-md-3" ng-if="docForm.text!=null" style="padding:15px;" >
+                  <uib-tabset>
+                    <uib-tab>
+                      <uib-tab-heading>
+                        Article
+                      </uib-tab-heading>
+                      <div>
+                        <div class="row">
+                          <label>Process:</label>
+                          <input type="text" class="form-control" ng-model="docForm.process" uib-typeahead="process as process.text for process in processSearch($viewValue)" />
+                        </div>
+                        <div class="row">
+                          <label>Article Owner</label>
+                          <input type="text" class="form-control" ng-model="docForm.articleOwner" uib-typeahead="user as user.username for user in userSearch($viewValue)" />
+                        </div>
+                      </div>
+                    </uib-tab>
+                    <uib-tab>
+                      <uib-tab-heading>
+                        TOC
+                      </uib-tab-heading>
+                      <div class="toc">
+                        <ol style="margin:20px 0px;">
+                          <li style="color:  #5257d2;font-size:20px;" ng-repeat="x in h1_array" ng-if="$index!=0">{{x.title}}
+                            <ol>
+                              <li style="margin:10px 0px;color:black;font-size:15px" ng-repeat="y in x.childeren" ng-if="$index!=0">{{y.title}}</li>
+                            </ol>
+                          </li>
+                        </ol>
+                      </div>
+
+                    </uib-tab>
+                    <uib-tab>
+                      <uib-tab-heading>
+                        Versions
+                      </uib-tab-heading>
+
+                      <div class="list-group" style="padding-top:15px;">
+                        <span ng-repeat="version in versions" class="list-group-item {{version.active?'active':''}}" ng-mouseover = "version.active = true" ng-mouseleave="version.active = false" ng-click="openVersion($index)"   style="cursor:pointer" >{{version.title}}</span>
+                      </div>
+                    </uib-tab>
+                  </uib-tabset>
                 </div>
               </div>
-              <div class="col-md-3" ng-if="docForm.text!=null" style="padding:15px;" >
-                <uib-tabset>
-                  <uib-tab>
-                    <uib-tab-heading>
-                      Article
-                    </uib-tab-heading>
-                    <div>
-                      <div class="row">
-                        <label>Process:</label>
-                        <input type="text" class="form-control" ng-model="docForm.process" uib-typeahead="process as process.text for process in processSearch($viewValue)" />
-                      </div>
-                      <div class="row">
-                        <label>Article Owner</label>
-                        <input type="text" class="form-control" ng-model="docForm.articleOwner" uib-typeahead="user as user.username for user in userSearch($viewValue)" />
-                      </div>
-                    </div>
-                  </uib-tab>
-                  <uib-tab>
-                    <uib-tab-heading>
-                      TOC
-                    </uib-tab-heading>
-                    <div class="toc">
-                      <ol style="margin:20px 0px;">
-                        <li style="color:  #5257d2;font-size:20px;" ng-repeat="x in h1_array" ng-if="$index!=0">{{x.title}}
-                          <ol>
-                            <li style="margin:10px 0px;color:black;font-size:15px" ng-repeat="y in x.childeren" ng-if="$index!=0">{{y.title}}</li>
-                          </ol>
-                        </li>
-                      </ol>
-                    </div>
-
-                  </uib-tab>
-                  <uib-tab>
-                    <uib-tab-heading>
-                      Versions
-                    </uib-tab-heading>
-
-                    <div class="list-group" style="padding-top:15px;">
-                      <span ng-repeat="version in versions" class="list-group-item {{version.active?'active':''}}" ng-mouseover = "version.active = true" ng-mouseleave="version.active = false" ng-click="openVersion($index)"   style="cursor:pointer" >{{version.title}}</span>
-                    </div>
-                  </uib-tab>
-                </uib-tabset>
+              <div class="form-group" ng-if="docForm.docs!=null">
+                <label>Document</label>
+                <input type="file" file-model="docForm.docs">
               </div>
-            </div>
-            <div class="form-group" ng-if="docForm.docs!=null">
-              <label>Document</label>
-              <input type="file" file-model="docForm.docs">
-            </div>
 
-          </div>
-          <div class="row" style="padding:20px">
-            <div class="col-md-2 col-md-offset-5">
-              <div class="btn btn-block btn-success" style="font-size:18px" ng-click="saveDoc()">
-                Save Document
+            </div>
+            <div class="row" style="padding:20px">
+              <div class="col-md-2 col-md-offset-5">
+                <div class="btn btn-block btn-success" style="font-size:18px" ng-click="saveDoc()">
+                  Save Document
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+
   </div>
 
 
