--- a/HR/static/ngTemplates/empSearch/tableThumbnail.html
+++ b/HR/static/ngTemplates/empSearch/tableThumbnail.html
@@ -3,7 +3,7 @@
     <!-- Widget: user widget style 1 -->
     <div class="box box-widget widget-user-2">
       <!-- Add the bg color to the header using any of the bg-* classes -->
-      <div class="widget-user-header {{$index | rainbow}} shaddowed card">
+      <div class="widget-user-header {{$index | rainbow}} ">
         <div class="widget-user-image">
           <img class="img-circle" ng-src="{{item.url | getDP}}" alt="DP">
         </div><!-- /.widget-user-image -->
