--- a/PIM/static/ngTemplates/app.home.dashboard.html
+++ b/PIM/static/ngTemplates/app.home.dashboard.html
@@ -1,4 +1,4 @@
-<div class="shaddowed card" style="min-height:93vh;position:relative;background-color:#f8f8f8">
+<div class="" style="min-height:93vh;position:relative;background-color:#f8f8f8">
 
   <breadcrumb></breadcrumb>
   <div ng-if="!isCustomer" class="container-fluid" style="color:black">
