--- a/employees/static/ngTemplates/app.employees.orgChart.html
+++ b/employees/static/ngTemplates/app.employees.orgChart.html
@@ -1,4 +1,4 @@
-<div class="shaddowed card bg-white" style="min-height:93vh;position:relative;">
+<div class=" bg-white" style="min-height:93vh;position:relative;">
   <div class="container-fluid" style="padding:0px;">
     <breadcrumb></breadcrumb>
     <div align="center">
