--- a/support/static/ngTemplates/app.qualityCheck.html
+++ b/support/static/ngTemplates/app.qualityCheck.html
@@ -1,4 +1,4 @@
-<div class="shaddowed card bg-white" style="min-height:93vh;position:relative;">
+<div class=" bg-white" style="min-height:93vh;position:relative;">
   <breadcrumb></breadcrumb>
 
   <div class="row container-fluid">
