--- a/support/static/ngTemplates/app.support.html
+++ b/support/static/ngTemplates/app.support.html
@@ -1,4 +1,4 @@
-<!-- <div class="shaddowed card bg-white" style="min-height:93vh;position:relative;"> -->
+<!-- <div class=" bg-white" style="min-height:93vh;position:relative;"> -->
   <div class="container-fluid" id="chatTab">
     <div class="row" style="background-color: white;">
 
