--- a/PIM/static/ngTemplates/home.html
+++ b/PIM/static/ngTemplates/home.html
@@ -1,8 +1,6 @@
 
-<div class="container-fluid " >
-  <div class="row">
-    <div class="col-md-12 " style="padding-left:0px;padding-right:0px;">
-      <div ui-view></div>
-    </div>
+<div class="container-fluid " style="padding:0px;" >
+  <div class="col-md-12 " style="padding-left:0px;padding-right:0px;">
+    <div ui-view></div>
   </div>
 </div>
