--- a/support/static/ngTemplates/app.uiSettings.html
+++ b/support/static/ngTemplates/app.uiSettings.html
@@ -1,4 +1,4 @@
-<div class="shaddowed card bg-white" style="min-height:93vh;">
+<div class=" bg-white" style="min-height:93vh;">
 
   <breadcrumb></breadcrumb>
   <div class="container-fluid" style="margin-top: 40px;" >
