--- a/tools/static/ngTemplates/app.tools.dash.html
+++ b/tools/static/ngTemplates/app.tools.dash.html
@@ -1,4 +1,4 @@
-<div class="shaddowed card bg-white" style="min-height:93vh;position:relative;">
+<div class=" bg-white" style="min-height:93vh;position:relative;">
 
   <p style="text-align:center;padding-top:200px;">
     <i class="fa fa-search-plus fa-5x"></i>
