--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.support.resolved.explore.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.support.resolved.explore.html
@@ -3,7 +3,7 @@
     <div class="col-md-9">
     <h5><strong>email : </strong><span>{{data.request.email}}</h5></span>
     <h5><strong>Mobile : </strong><span>{{data.request.mobile}}</h5></span>
-    <h5 ng-if="data.request.invoiceNo"><strong>Invoice No : </strong><span>{{data.request.mobile}}</h5></span>
+    <h5 ng-if="data.request.invoiceNo"><strong>Invoice No : </strong><span>{{data.request.invoiceNo}}</h5></span>
     <h5 ng-if="data.request.subject"><strong>Subject : </strong><span>{{data.request.subject}}</h5></span>
     <h5><strong>Message : </strong><span>{{data.request.message}}</h5></span>
     <h5><strong>Status : </strong><span>{{data.request.status}}</h5></span>
